--- a/index.html
+++ b/index.html
@@ -8,36 +8,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
 
     <div id="header">
         <a href="#" id="gmail">Gmail</a>
         <a href="#" id="imagenes">Imágenes</a>
-        <a href="#" id="google-apps">apps<img src="imgs/google-apps-btn.png" height="20px" width="20px"></a>
+        <a href="#" id="google-apps"><img src="imgs/google-apps-btn.png" height="20px" width="20px"></a>
 
     </div>
 
     <div id="main">
 
         <a href="#" id="logo"><img src="imgs/640px-Google_2015_logo.svg.png" height="80px"></a>
-        <input type="text"> 
-        <button id="buscar">Buscar con Google</button>
-        <button id="random">Me siento con suerte</button>
-
-        <h4 id="languages">Ofrecido por Google en: <a href="#">English</a> <a href="#">한국어</a></h4>
+        <input type="text" id="input">
+        <div id="flexbox"> 
+            <button id="buscar-btn">Buscar con Google</button>
+            <button id="suerte-btn">Me siento con suerte</button>
+        </div>    
+        <h4 id="languages">Ofrecido por Google en: <a href="#" font-size="20px" style="color: rgba(0, 0, 255, 0.705);">English</a> <a href="#" style="color: rgba(0, 0, 255, 0.705);">한국어</a></h4>
 
     </div>
 
     <div id="footer">
 
-       <h5 id="ciudad">Argentina</h5>
-       <a href="#">Publicidad</a> 
-       <a href="#">Negocios</a> 
-       <a href="#">Sobre Google</a> 
-       <a href="#">Como funciona la Busqueda</a> 
-       <a href="#">Privacidad</a> 
-       <a href="#">Condiciones</a> 
-       <a href="#">Preferencias</a> 
+       <a href="#" id="negocios">Negocios</a> 
+       <a href="#" id="sobre-google">Sobre Google</a> 
+       <a href="#" id="funciona-busqueda">Como funciona la Busqueda</a> 
+       <a href="#" id="privacidad">Privacidad</a> 
+       <a href="#" id="condiciones">Condiciones</a> 
+       <a href="#" id="preferencias">Preferencias</a> 
 
 
     </div>
